--- a/Kount-0630/src/settings.ini
+++ b/Kount-0630/src/settings.ini
@@ -14,7 +14,7 @@ URL=https://risk.kount.net
 
 ; RIS connection timeout in whole numbers of seconds. Set to 0 for unlimited
 ; timeout (not recommended). The recommended value is 30.
-CONNECT_TIMEOUT=30
+CONNECT_TIMEOUT=10
 
 ; Client authentication certificate
 ; If certificate is a .pk12 file then it must be converted to PEM format.
@@ -36,12 +36,13 @@ API_KEY=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiIxNDY2MDAiLCJhdWQiOiJLb3V
 ; SDK are NOP (a logger that silently discards all logging), and SIMPLE (a
 ; simple logger that writes messages to a specified file).
 ; See the README for more advanced logging configuration information.
-LOGGER=NOP
+;LOGGER=NOP
+LOGGER=SIMPLE
 
 ; Logging level for SimpleLogger if it is enabled.
 ; Acceptable logging levels in order of decreasing severity are FATAL, ERROR,
 ; WARN, INFO, and DEBUG.
-SIMPLE_LOG_LEVEL=DEBUG
+SIMPLE_LOG_LEVEL=ERROR
 
 ; Specify the file name where the SimpleLogger will log messages to.
 SIMPLE_LOG_FILE=Kount-SDK-Ris-PHP.log
