--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "gulp-load-plugins": "^1.4.0",
     "gulp-minify": "0.0.14",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-sass-error": "^1.0.2",
     "gulp-sass-glob": "^1.0.6",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-watch": "^4.3.9",
-    "node-sass": "^3.9.3"
+    "node-sass": "^3.9.3",
+    "postcss-flexbugs-fixes": "^2.0.0"
   }
 }
