--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "lib.external ============",
   "main": "index.js",
   "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-include": "^2.3.1",
     "gulp-install": "^0.6.0",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sass": "^3.1.0",
     "imagemin-pngquant": "^5.0.0"
   },
   "scripts": {
@@ -24,18 +28,18 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "babelify": "^7.3.0",
-    "babili": "^0.1.2",
-    "browserify": "^14.1.0",
+    "babili": "^0.1.4",
+    "browserify": "^14.5.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-es6-transpiler": "^1.0.1",
-    "gulp-imagemin": "^3.0.2",
+    "gulp-imagemin": "^3.4.0",
     "gulp-load-plugins": "^1.4.0",
     "gulp-minify": "0.0.14",
     "gulp-notify": "^3.0.0",
@@ -43,7 +47,7 @@
     "gulp-postcss": "^6.2.0",
     "gulp-sass-error": "^1.0.2",
     "gulp-sass-glob": "^1.0.6",
-    "gulp-sourcemaps": "^2.2.0",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.8",
